// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Panel renders with defaultProps 1`] = `
<div
  className="ax-panel ax-theme--day"
  style={
    Object {
      "minHeight": undefined,
    }
  }
>
  <div
    className="ax-panel__header"
  >
    Lorem Ipsum
  </div>
  <div
    className="ax-panel__body"
  >
    Lorem Ipsum
  </div>
</div>
`;

exports[`Panel renders with minHeight 1`] = `
<div
  className="ax-panel ax-theme--day"
  style={
    Object {
      "minHeight": "10rem",
    }
  }
>
  <div
    className="ax-panel__header"
  >
    Lorem Ipsum
  </div>
  <div
    className="ax-panel__body"
  >
    Lorem Ipsum
  </div>
</div>
`;
